--- a/search/index.html
+++ b/search/index.html
@@ -69,7 +69,7 @@
         
         <div class="site-meta">
             <h1 class="site-name"><a href="/">趙冠霖|ZHAO,GUAN-LIN</a></h1>
-            <h2 class="site-description">當你真心渴望某樣東西時，整個宇宙都會聯合起來幫助你完成。When you really want something, all the universe conspires in helping you to achieve it.</h2>
+            <h2 class="site-description">期許自擁有「創業家的心態，運動員的身體，藝術家的靈魂」</h2>
         </div>
     </header><ol class="social-menu">
             
