--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>https://victorchao996.github.io/en/about/</title>
-    <link rel="canonical" href="https://victorchao996.github.io/en/about/">
+    <title>https://victorchao996.github.io/en/about-author/</title>
+    <link rel="canonical" href="https://victorchao996.github.io/en/about-author/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://victorchao996.github.io/en/about/">
+    <meta http-equiv="refresh" content="0; url=https://victorchao996.github.io/en/about-author/">
   </head>
 </html>
