--- a/en/search/index.html
+++ b/en/search/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>Search</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>Search</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/en/search/'>
 
@@ -11,11 +13,7 @@
 <meta property='og:site_name' content='Victor&#39;s Blog'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://victorchao996.github.io/en/search/index.json">
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
+<meta name="twitter:description" content="">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -26,7 +24,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head><link rel="preload" href="https://victorchao996.github.io/en/search/index.json" as="fetch" crossorigin="anonymous">
+<link rel="alternate" type="application/json" href="https://victorchao996.github.io/en/search/index.json">
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+<link rel="preload" href="https://victorchao996.github.io/en/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
