--- a/p/2022review/index.html
+++ b/p/2022review/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='2022年的重大回顧&amp;2023年新年新希望'><title>2022年回顧</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='2022年的重大回顧&amp;2023年新年新希望'>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>2022年回顧</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/p/2022review/'>
 
@@ -13,10 +15,6 @@
 <meta name="twitter:title" content="2022年回顧">
 <meta name="twitter:description" content="2022年的重大回顧&amp;2023年新年新希望"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://victorchao996.github.io/p/2022review/2022.jpg' />
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -27,7 +25,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head>
+
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+
     </head>
     <body class="
     article-page
