--- a/p/interviewrecord_first_experience/index.html
+++ b/p/interviewrecord_first_experience/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='前言 一想到目前自己已經大四，再過一段時間就要正式告別校園，在真正的進入一家公司工作之前肯定會經過不少次面試。有鑑於此，我想把每次面試的過程中'><title>面試趣-系列文開篇介紹</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='前言 一想到目前自己已經大四，再過一段時間就要正式告別校園，在真正的進入一家公司工作之前肯定會經過不少次面試。有鑑於此，我想把每次面試的過程中'>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>面試趣-系列文開篇介紹</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/p/interviewrecord_first_experience/'>
 
@@ -13,10 +15,6 @@
 <meta name="twitter:title" content="面試趣-系列文開篇介紹">
 <meta name="twitter:description" content="前言 一想到目前自己已經大四，再過一段時間就要正式告別校園，在真正的進入一家公司工作之前肯定會經過不少次面試。有鑑於此，我想把每次面試的過程中"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://victorchao996.github.io/p/interviewrecord_first_experience/interview.jpg' />
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -27,7 +25,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head>
+
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+
     </head>
     <body class="
     article-page
