--- a/p/readingoutput-opening/index.html
+++ b/p/readingoutput-opening/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='前言 自從去年年末意外開啟閱讀課外書這條路後，陸陸續續的看了快十本書。我沒有特別強求閱讀的數量，反而是很隨意的看，有時心血來潮可以把半本書看完'><title>書本閱讀系列-首篇</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='前言 自從去年年末意外開啟閱讀課外書這條路後，陸陸續續的看了快十本書。我沒有特別強求閱讀的數量，反而是很隨意的看，有時心血來潮可以把半本書看完'>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>書本閱讀系列-首篇</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/p/readingoutput-opening/'>
 
@@ -13,10 +15,6 @@
 <meta name="twitter:title" content="書本閱讀系列-首篇">
 <meta name="twitter:description" content="前言 自從去年年末意外開啟閱讀課外書這條路後，陸陸續續的看了快十本書。我沒有特別強求閱讀的數量，反而是很隨意的看，有時心血來潮可以把半本書看完"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://victorchao996.github.io/p/readingoutput-opening/reading.jpg' />
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -27,7 +25,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head>
+
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+
     </head>
     <body class="
     article-page
