--- a/p/independent-study-project-10things/index.html
+++ b/p/independent-study-project-10things/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='兩個學期下來學期到的十個重點'><title>關於大三專題我學到的十件事</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='兩個學期下來學期到的十個重點'>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>關於大三專題我學到的十件事</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/p/independent-study-project-10things/'>
 
@@ -13,10 +15,6 @@
 <meta name="twitter:title" content="關於大三專題我學到的十件事">
 <meta name="twitter:description" content="兩個學期下來學期到的十個重點"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://victorchao996.github.io/p/independent-study-project-10things/lesson.jpg' />
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -27,7 +25,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head>
+
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+
     </head>
     <body class="
     article-page
