--- a/p/test/index.html
+++ b/p/test/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='關於黃色網狀線為何要設置在路口的理由'><title>從Deadlock(死結)的觀點來分析黃色網狀線的作用</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='關於黃色網狀線為何要設置在路口的理由'>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>從Deadlock(死結)的觀點來分析黃色網狀線的作用</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/p/test/'>
 
@@ -13,10 +15,6 @@
 <meta name="twitter:title" content="從Deadlock(死結)的觀點來分析黃色網狀線的作用">
 <meta name="twitter:description" content="關於黃色網狀線為何要設置在路口的理由"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://victorchao996.github.io/p/test/%E9%BB%83%E8%89%B2%E7%B6%B2%E7%8B%80%E7%B7%9A.jpg' />
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -27,7 +25,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head>
+
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+
     </head>
     <body class="
     article-page
