--- a/相關連結/index.html
+++ b/相關連結/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>相關連結</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''>
+
+<meta name="google-site-verification" content="Gq75RkEvufYblKKhxgbp6gW5aTP_vMIGcFpOEWiRgY4" /><title>相關連結</title>
 
 <link rel='canonical' href='https://victorchao996.github.io/%E7%9B%B8%E9%97%9C%E9%80%A3%E7%B5%90/'>
 
@@ -12,10 +14,6 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="相關連結">
 <meta name="twitter:description" content="">
-<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-
-
-<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CX6E9WC1NJ"></script>
 <script>
 var doNotTrack = false;
@@ -26,7 +24,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-CX6E9WC1NJ', { 'anonymize_ip': false });
 }
 </script>
-</head>
+
+<link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
+
     </head>
     <body class="
     article-page
