1.new post: 前端學習第五周

--- a/p/interviewrecord_appworks_school_campus_program/index.html
+++ b/p/interviewrecord_appworks_school_campus_program/index.html
@@ -7,7 +7,7 @@
 
 <link rel='canonical' href='https://victorchao996.github.io/p/interviewrecord_appworks_school_campus_program/'>
 
-<link rel="stylesheet" href="/scss/style.min.a8dd000923453ffdc61da1b65e44a788a4389358ffc866b1520ea43f79a4e354.css"><meta property='og:title' content='面試趣-AppWorks School校園培訓計畫'>
+<link rel="stylesheet" href="/scss/style.min.c103f56003f1b9bab4ca8fa15a77002bb7786d23667d8ac6839ed974e296cd54.css"><meta property='og:title' content='面試趣-AppWorks School校園培訓計畫'>
 <meta property='og:description' content='人生第一面'>
 <meta property='og:url' content='https://victorchao996.github.io/p/interviewrecord_appworks_school_campus_program/'>
 <meta property='og:site_name' content='Victor&#39;s Blog'>
@@ -443,6 +443,8 @@ if (!doNotTrack) {
 <p>面完的當下就很想要重來一次，不過時間無法倒流，期許自己好好把握每一次學習的機會。做為人生第一次正式的面試，雖然過程只有短短半小時，而且也不是工作相關的，不過我認為這是非常難得的學習機會，我也很慶幸自己踏出這一步。</p>
 <p>非常感謝Appsowrk School給我這面談的機會，在準備面談的過程中我明確了解自己有非常多的不足，值得我投入時間去改善學習。另外在這兩三周忙碌的準備中也將我從低潮中抽離出來，使我能不再把注意力放在那些會讓我焦慮的想法上。</p>
 <p>第一次的面試心得就分享到這，下一站會去哪呢? 面試趣，我們下一篇再見。</p>
+<h2 id="後記">後記</h2>
+<p>我在2023/1/3收到錄取通知啦!!! 感謝當初有付出行動的我，希望加入program之後依切順利。</p>
 
 </section>
 
@@ -714,6 +716,7 @@ if (!doNotTrack) {
       </ul>
     </li>
     <li><a href="#總結">總結</a></li>
+    <li><a href="#後記">後記</a></li>
   </ul>
 </nav>
         </div>
